[package]
name = "roundqueue"
version = "0.1.2"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]
description = "Easy queueing system"

[badges]
travis-ci = { repository = "droundy/roundqueue", branch = "master" }

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.3.16"
clap = "~2.23.3"
hostname = "^0.1.3"
unix-daemonize = "^0.1.2"
num_cpus = "1.6"
notify = "^4.0.1"
libc = "0.2"
shared_child = "0.3.2"
dirs = "1.0"
git-version = "0.3.0"
