[package]
name = "roundqueue"
version = "0.1.6"
authors = ["droundy <roundyd@physics.oregonstate.edu>"]
description = "Easy queueing system"
license = "GPL-2.0"

[badges]
travis-ci = { repository = "droundy/roundqueue", branch = "master" }

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "2.33.0"
hostname = "0.3"
unix-daemonize = "^0.1.2"
num_cpus = "1.6"
notify = "^4.0.1"
libc = "0.2"
shared_child = "0.3.2"
dirs = "3.0"
git-version = "0.3.4"
